<?xml version="1.0"?>
<package format="2">
  <name>cylinder_segmentation</name>
  <version>0.0.0</version>
  <description>The cylinder_segmentation package</description>

  <maintainer email="yiying.lai@outlook.com">Yiying Lai</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>karlvin_vision</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>karlvin_vision</exec_depend>

  <test_depend>moveit_resources</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
